carousel photos added with front end routes, working on api calls

--- a/public/Styles/stylesheet.css
+++ b/public/Styles/stylesheet.css
@@ -149,10 +149,11 @@
 }
 
 .carousel-image {
+  position: relative;
   height: 60vh;
   width: 100vw;
+  z-index: 1;
 }
-
 .slick-dots {
   top: 0 !important;
 }
