spotlight carousel working

--- a/public/Styles/stylesheet.css
+++ b/public/Styles/stylesheet.css
@@ -146,6 +146,7 @@
   height: 60vh;
   color: #333;
   background: #419be0;
+  box-shadow: 0 0 10px #B8BFBF;
 }
 
 .carousel-image {
@@ -182,7 +183,7 @@
   width: 100vw;
 }
 
-#songkik-input {
+#songkick-input {
   width: 60vw;
   height: 22vh;
   background: #ffffff;
